feat: create menu and header

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<!-- Webix Library -->
 	<script type="text/javascript" src="./root/libs/codebase/webix.js"></script>
 	<link rel="stylesheet" type="text/css" href="./root/libs/codebase/webix.css">
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
 	<!-- App -->
 	<script type="text/javascript" src="./codebase/myapp.js"></script>
